Attempts to fix scroll on iPhone when sidebar open

--- a/src/index.css
+++ b/src/index.css
@@ -96,6 +96,8 @@ a {
 
 .no-scroll {
   overflow: hidden;
+  touch-action: none;
+  -ms-touch-action: none;
 }
 
 .main-container {
